src/ui/Style.css
/* utility */

.hflex {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.vflex {
    display: flex;
    flex-direction: column;
}
.flex-grow {
    flex: 1 0 0;
}
.hscrollable {
    overflow-x: auto;
    /* fix scroll momentum on old Safari */
    -webkit-overflow-scrolling: touch;
}
.vscrollable {
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
}
.hide {
    display: none;
}

/* common */

body {
    display: flex;
    flex-direction: column;
    font-family: sans-serif;
}

.small-input {
    width: 48pt;
}

/* Buttons */

.label-button {
    white-space: nowrap;
}
.label-button input {
    display: none;
}

button,
.label-button span {
    display: inline-flex;
    justify-content: center;
    padding: 6pt 8pt;
    border: 1pt solid #888;
    background: #eee;
    border-radius: 6pt;
    touch-action: manipulation;
}

.label-button span {
    flex: 1 0 0;
}

button:active,
.label-button :active + span {
    background: #ccc;
}

.label-button :checked + span {
    background: #cdf;
}

.label-button :checked:active + span {
    background: #abe;
}

.icon {
    width: 18pt;
    height: 18pt;
}

label {
    display: inline-flex;
    align-items: center;
}

/* pattern table */

th, .pattern-cell {
    font-family: monospace;
    border: 1px solid black;
    white-space: nowrap;
}
table {
    border-collapse: collapse;
}
/* https://issues.chromium.org/issues/40511425 */
th {
    position: sticky;
    position: -webkit-sticky;
    background-color: white;
}
thead th {
    top: 0;
}
tbody th {
    left: 0;
}
tbody tr:nth-child(4n+1),
tbody tr:nth-child(4n+1) th {
    background: #eee;
}
tbody tr:nth-child(16n+1),
tbody tr:nth-child(16n+1) th {
    background: lightgray;
}
.sel-cell {
    background: pink;
}
.sel-pitch .cell-pitch,
.sel-inst .cell-inst,
.sel-effect .cell-effect {
    background: greenyellow;
}
.hilite-row {
    background: lightblue !important;
}

.hselect {
    display: table-row;
}

.hselect option {
    display: table-cell;
}

.pattern-table-space {
    height: 50%;
}

